# union-military-lowyers-bot

./: .gitignore  config.py  main.py  pyproject.toml  storage.py
handlers/: __init__.py  admin_handler.py  callback_handler.py  channel_handler.py  message_handler.py
models/: schemas.py
schemas/: media_schemas.py
services/: github_service.py  supabase_service.py
