[project]
name = "union-militaty-lawyers-bot"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiogram>=3.22.0",
    "aiohttp>=3.12.15",
    "asyncpg>=0.30.0",
    "black>=25.9.0",
    "pillow>=12.0.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.11.10",
    "python-dotenv>=1.2.1",
    "python-json-logger>=4.0.0",
    "structlog>=25.5.0",
    #    "supabase>=2.24.0",
    "pygithub>=2.4.1",
]
