[project]
name = "union-military-lawyers-bot"
version = "0.2.0"
description = "Telegram bot for military lawyers union with file management"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.22.0",
    "black>=25.9.0",
    "pydantic>=2.11.10",
    "python-dotenv>=1.2.1",
    "pygithub>=2.4.1",
]

[tool.black]
line-length = 88
target-version = ['py312']
